[project]
name = "daz2lora"
version = "0.1.0"
description = "DAZ-to-LoRA Character Dataset & Training Tool"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.3",
    "mypy>=1.8",
    "pyinstaller>=6",
]

[project.scripts]
daz2lora = "daz2lora.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"daz2lora.daz_scripts" = ["*.dsa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
